@@ -32,7 +32,6 @@ This is the QT5 version of KKEDit and is not yet as full featured as the gtk ver
 
 TODO ( in no particular order ):
 
-Search within buitltin doc viewer ( Medium )<br>
 Global tools ( Minor )<br>
 Interaction with built document ( Major )<br>
 Scripting ( Major, mostly done )<br>
